--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   equatable: ^2.0.3
   ndialog: ^4.1.0
   rflutter_alert: ^2.0.2
-
+  hive: ^2.0.4  
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
